@@ -1,0 +1,7 @@
+{
+  "stardewEventID": 19954,
+  "eventStringId": "HappyBirthday_Events_BirthdayParty_Dating_Leah",
+  "version": 2,
+  "EventData": "playful/12 7/farmer 7 9 0 Leah 11 14 0/skippable/addObject 11 12 220/globalFadeToClear 0.007/move farmer 0 -2 0 False/faceDirection Leah 3 True/Omegasis.HappyBirthday.Events.SpeakWithTranslatedMessage Leah DatingLeahBirthday_Leah:0/move farmer 3 0 2 False/move farmer 0 7 1 False/Omegasis.HappyBirthday.Events.SpeakWithTranslatedMessage Leah DatingLeahBirthday_Leah:1/emote farmer 32/Omegasis.HappyBirthday.Events.SpeakWithTranslatedMessage Leah DatingLeahBirthday_Leah:2/Omegasis.HappyBirthday.Events.SpeakWithTranslatedMessage Leah DatingLeahBirthday_Leah:3/Omegasis.HappyBirthday.Events.SpeakWithTranslatedMessage Leah DatingLeahBirthday_Leah:4/emote farmer 20/emote Leah 20/globalFade 0.01/viewport -100 -100 true/Omegasis.HappyBirthday.Events.ShowTranslatedMessage DatingLeahBirthday_Finish:0/Omegasis.HappyBirthday.Events.ShowTranslatedMessage DatingLeahBirthday_Finish:1/Omegasis.EventFramework.AddObjectToPlayersInventory 220 1 False/Omegasis.HappyBirthday.Events.ShowTranslatedMessage PartyOver/end",
+  "EventPreconditionData": "Omegasis.HappyBirthday.Framework.EventPreconditions.FarmerBirthdayPrecondition/StardustCore.Events.Preconditions.GameLocationPrecondition LeahHouse/StardustCore.Events.Preconditions.TimeSpecific.TimeOfDayPrecondition 600 2600/StardustCore.Events.Preconditions.NPCSpecific.DatingNPC Leah/Omegasis.HappyBirthday.Framework.Events.Compatibility.StardewValleyExpanded.IsStardewValleyExpandedInstalledPrecondition True/"
+}
