@@ -1,0 +1,7 @@
+{
+  "stardewEventID": 19951,
+  "eventStringId": "HappyBirthday_Events_BirthdayParty_Dating_Penny_Trailer",
+  "version": 2,
+  "EventData": "playful/12 8/farmer 12 9 0 Penny 12 7 0 Pam 15 4 2/skippable/globalFadeToClear 0.007/move farmer 0 -1 0 False/faceDirection Penny 2 True/Omegasis.HappyBirthday.Events.SpeakWithTranslatedMessage Penny DatingPennyBirthday_Penny:0/Omegasis.HappyBirthday.Events.SpeakWithTranslatedMessage Pam DatingPennyBirthday_Pam:0/Omegasis.HappyBirthday.Events.SpeakWithTranslatedMessage Penny DatingPennyBirthday_Penny:1/Omegasis.HappyBirthday.Events.SpeakWithTranslatedMessage Pam DatingPennyBirthday_Pam:1/emote Penny 12/Omegasis.HappyBirthday.Events.SpeakWithTranslatedMessage Penny DatingPennyBirthday_Penny:2/Omegasis.HappyBirthday.Events.SpeakWithTranslatedMessage Penny DatingPennyBirthday_Penny:3/move Penny -3 0 0 True/move farmer 1 0 0 False/move farmer 0 -3 1 False/move farmer 1 0 0 False/move Penny 5 0 0 True/move Penny 0 -1 0 True/Omegasis.HappyBirthday.Events.SpeakWithTranslatedMessage Pam DatingPennyBirthday_Pam:2/Omegasis.HappyBirthday.Events.SpeakWithTranslatedMessage Penny DatingPennyBirthday_Penny:4/emote farmer 20/emote Penny 20/globalFade 0.01/viewport -100 -100 true/Omegasis.HappyBirthday.Events.ShowTranslatedMessage DatingPennyBirthday_Finish:0/Omegasis.HappyBirthday.Events.ShowTranslatedMessage DatingPennyBirthday_Finish:1/Omegasis.EventFramework.AddObjectToPlayersInventory 220 1 False/Omegasis.EventFramework.AddObjectToPlayersInventory 346 1 False/Omegasis.HappyBirthday.Events.ShowTranslatedMessage PartyOver/end",
+  "EventPreconditionData": "Omegasis.HappyBirthday.Framework.EventPreconditions.FarmerBirthdayPrecondition/StardustCore.Events.Preconditions.GameLocationPrecondition Trailer/StardustCore.Events.Preconditions.TimeSpecific.TimeOfDayPrecondition 600 2600/StardustCore.Events.Preconditions.NPCSpecific.DatingNPC Penny/Omegasis.HappyBirthday.Framework.Events.Compatibility.StardewValleyExpanded.IsStardewValleyExpandedInstalledPrecondition True/"
+}
