@@ -1,7 +1,7 @@
 {
   "Name": "Happy Birthday en-US Translation Content Pack",
   "Author": "Omegasis",
-  "Version": "1.1.2",
+  "Version": "1.2.0",
   "Description": "A content pack that contains English translations for the mod, Happy Birthday.",
   "UniqueID": "Omegasis.HappyBirthday.ContentPack.en-US",
   "UpdateKeys": [ "Nexus:11148" ],
