@@ -1,7 +1,7 @@
 {
   "Name": "Happy Birthday",
   "Author": "Alpha_Omegasis",
-  "Version": "3.15.2",
+  "Version": "3.16.0",
   "Description": "Adds the farmer's birthday to the game.",
   "UniqueID": "Omegasis.HappyBirthday",
   "EntryDll": "HappyBirthday.dll",
